@@ -1,6 +1,6 @@
-package com.agh.hydra.api.register.request;
+package com.agh.hydra.job.request;
 
-import com.agh.hydra.api.register.model.Company;
+import com.agh.hydra.common.model.JobId;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -8,15 +8,18 @@ import lombok.Setter;
 
 import javax.validation.Valid;
 import javax.validation.constraints.Size;
-import java.util.List;
+import java.util.Set;
 
 @Setter
 @Getter
 @NoArgsConstructor
-@AllArgsConstructor(staticName = "of")
-public class UpdateCompaniesRequest {
+@AllArgsConstructor
+public class JobAnnouncementRequest {
 
+    /**
+     * Job announcement identifiers
+     */
     @Valid
     @Size(min = 1)
-    private List<Company> companies;
+    private Set<JobId> ids;
 }
