@@ -3,6 +3,7 @@ package com.agh.hydra.job.dao;
 import com.agh.hydra.job.entity.JobEntity;
 import com.agh.hydra.job.model.JobAnnouncementFilter;
 import org.apache.ibatis.annotations.Mapper;
+import org.apache.ibatis.annotations.Param;
 
 import java.util.List;
 
@@ -14,4 +15,6 @@ public interface JobRepository {
     List<JobEntity> getJobAnnouncements(JobAnnouncementFilter filter);
 
     long getJobAnnouncementCount(JobAnnouncementFilter filter);
+
+    void invalidateJobAnnouncement(@Param("ids") List<Long> ids);
 }
