@@ -3,6 +3,7 @@ package com.agh.hydra.job.impl;
 import com.agh.hydra.api.register.service.IPrivilegeService;
 import com.agh.hydra.common.model.ProgrammingLanguage;
 import com.agh.hydra.common.model.UserId;
+import com.agh.hydra.common.model.ValueObject;
 import com.agh.hydra.common.util.PageableUtils;
 import com.agh.hydra.job.dao.JobRepository;
 import com.agh.hydra.job.entity.JobEntity;
@@ -11,6 +12,7 @@ import com.agh.hydra.job.model.JobAnnouncement;
 import com.agh.hydra.job.model.JobAnnouncementFilter;
 import com.agh.hydra.job.request.CreateJobAnnouncementRequest;
 import com.agh.hydra.job.request.JobAnnouncementFilterRequest;
+import com.agh.hydra.job.request.JobAnnouncementRequest;
 import com.agh.hydra.job.service.IJobService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -27,6 +29,7 @@ import java.util.Set;
 import java.util.stream.Stream;
 
 import static com.agh.hydra.common.model.FunctionalPrivilege.FN_PRV_EDIT_JOBS;
+import static com.agh.hydra.common.model.FunctionalPrivilege.FN_PRV_INVALIDATE_JOBS;
 import static com.agh.hydra.common.util.CollectionUtils.mapList;
 import static com.agh.hydra.common.util.ObjectUtils.getOrDefault;
 import static com.agh.hydra.common.util.ObjectUtils.getOrNull;
@@ -71,6 +74,12 @@ public class JobService implements IJobService {
         long total = jobRepository.getJobAnnouncementCount(filter);
 
         return new PageImpl<>(announcements, pageable, total);
+    }
+
+    @Override
+    public void invalidateJobAnnouncement(@Valid @NotNull JobAnnouncementRequest request, @Valid @NotNull UserId userId) {
+        privilegeService.throwIfUnprivileged(userId, FN_PRV_INVALIDATE_JOBS);
+        jobRepository.invalidateJobAnnouncement(mapList(request.getIds(), ValueObject::getValue));
     }
 
     private Set<ProgrammingLanguage> parseLanguages(String languages) {
