@@ -1,3 +1,4 @@
+ - #62 impl for service : PUT /job/invalidate
  - #52 impl for service : GET /job/jobs
  - #61 impl for service : POST /job/add
  - update postman collection
